--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,4 @@ before_install:
   - composer install --dev
  
 script:
-  - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
- 
-after_script:
-  - php vendor/bin/coveralls -v
+  - ./vendor/bin/phpunit 
