--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   fast_finish: true
 
 before_script:
+  - cp .env.travis .env
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction --dev
 
