--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - cp .env.travis .env
   - composer self-update 
   - composer install --no-interaction 
+  - php artisan key:generate 
 
 script:
   - ./vendor/bin/phpunit 
