--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ matrix:
 
 before_script:
   - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
   - composer self-update 
-  - composer install --no-interaction 
+  - composer install --no-interaction
   - php artisan key:generate 
   - php artisan migrate
 
